# interactiveLUT_SGX_Linux

./: README.md  demo_testRes.xlsx  ~$demo_testRes.xlsx
src/: makeTable.py
src/Key/: Params  PublicKey  RelinKey  SecretKey
src/Result/: Input_1  Input_2  Input_3  IntermediateRes1_10  IntermediateRes1_12  IntermediateRes1_14  IntermediateRes1_4  IntermediateRes1_6  IntermediateRes1_8  IntermediateRes2_10  IntermediateRes2_12  IntermediateRes2_4  IntermediateRes2_6  IntermediateRes2_8  IntermediateRes3_4  IntermediateRes3_6  IntermediateRes3_8  OutputResult  RandomNum  queryPIR
src/Table/one/: vectorOfInLUT_one_12.txt  vectorOfOutLUT_one_13.txt  vectorOfOutLUT_one_14.txt  vectorOfOutLUT_one_16.txt  vectorOfOutLUT_one_18.txt
src/Table/three/: vectorOfInLUT_three_4.txt  vectorOfInLUT_three_6.txt  vectorOfOutLUT_three_4.txt
src/Table/two/: vectorOfInLUT_two_10.txt  vectorOfInLUT_two_12.txt  vectorOfInLUT_two_8.txt  vectorOfOutLUT_two_8.txt
src/decryptor/: CMakeLists.txt  checkResult.cpp  demo.hpp  keyGeneration.cpp  makeQuery.cpp  makeQueryThree.cpp  makeQueryTwo.cpp
src/serveruser/: CMakeLists.txt  demo.hpp  extractOutput.cpp  extractOutputThree.cpp  extractOutputTwo.cpp  makeInput.cpp  makeInputThree.cpp  makeInputTwo.cpp  searchInput.cpp  searchInputThree.cpp  searchInputTwo.cpp
